# moody

./: .env.prod.example  .gitignore  Caddyfile  README.md  azure.yaml  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  render.yaml  session_handover.md  smoke_test.py
.azure/: plan.copilotmd
.github/workflows/: azure-deploy.yml  azure-preview.yml  azure-static-web-app.yml  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: asset_universe.py  circuit_breaker.py  config.py  core.py  core2.py  core_unified.py  crud.py  db.py  deps.py  main.py  middleware_fault.py  models.py  schemas.py  security.py  services_backtest.py  services_bot.py  services_exchange.py  services_montecarlo.py  services_stream.py  tasks.py  telemetry.py
backend/app/routers/: auth.py  backtest.py  dashboard.py  logs.py  paper.py  settings.py  strategy.py
backend/app_web/: index.html
backend/app_web/_expo/static/js/web/: AppEntry-4a2586d97ec618caca22821cec83c878.js
backend/scripts/: migrate_encrypt_keys.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_backtest.py  test_circuit_breaker.py  test_fault_injection.py  test_health.py  test_montecarlo.py
chaos/: experiment-api-down.yaml  experiment-db-timeout.yaml  experiment-exchange-unavailable.yaml
db/: schema.sql
docs/: stochastic_simulation.md
infra/: main.bicep  main.parameters.json
mobile/: App.tsx  app.json  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json
scripts/: setup-vps.sh
web/: package-lock.json  package.json
(+27 files in other folders)
