[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moody-backend"
version = "0.1.0"
description = "Swing Trade Bot API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]==0.35.0",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]==3.3.3",
    "python-dotenv==1.1.1",
    "pydantic>=2.12.0,<3.0.0",
    "PyJWT==2.10.1",
    "pandas==2.2.3",
    "numpy==2.2.6",
    "ccxt==4.4.95",
    "cryptography>=44.0.0",
    "yfinance==0.2.54",
    # OpenTelemetry
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx==0.28.1",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
